Created page with "===Licenza==="

--- a/wiki/it/Macro_Batch_Export_To_Mesh.html
+++ b/wiki/it/Macro_Batch_Export_To_Mesh.html
@@ -1163,21 +1163,21 @@ BatchETM = BatchExportToMesh()
 BatchETM.show()
 BatchETM.destroyed.connect(lambda: FreeCADGui.getMainWindow().findChild(QtWidgets.QWidget, "BatchETM").deleteLater())
 </pre>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Licence">Licence</span></h2>
-</div>
+<p><span id="Licence"></span>
+</p>
+<h3><span class="mw-headline" id="Licenza">Licenza</span></h3>
 <p>Copyright 2024 Pablo Gil Fern&aacute;ndez
 Quest'opera &egrave; rilasciata con licenza GNU Lesser General Public License (LGPL). Per visualizzare una copia di questa licenza, visitare:<br>
 <a rel="nofollow" class="external free" href="https://www.gnu.org/licenses/lgpl-3.0.html">https://www.gnu.org/licenses/lgpl-3.0.html</a>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123135725
+Cached time: 20260123135736
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.092 seconds
+CPU time usage: 0.042 seconds
+Real time usage: 0.058 seconds
 Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2172/2097152 bytes
 Template argument size: 289/2097152 bytes
@@ -1188,12 +1188,12 @@ Unstrip post&#8208;expand size: 50450/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.776      1 -total
- 53.77%    7.407      1 Template:Macro
- 43.32%    5.967      1 Template:MacroCode
+100.00%    7.124      1 -total
+ 59.28%    4.223      1 Template:Macro
+ 38.88%    2.770      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135725 and revision id 1742894. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135736 and revision id 1742896. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
