--- a/wiki/it/Macro_Batch_Export_To_Mesh.html
+++ b/wiki/it/Macro_Batch_Export_To_Mesh.html
@@ -2,24 +2,23 @@
 <li><a href="../de/Macro_Batch_Export_To_Mesh.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Stapelexport in Netz (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Batch_Export_To_Mesh.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Batch Export To Mesh (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Batch_Export_To_Mesh.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Batch Export To Mesh (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Batch_Export_To_Mesh.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Zbiorczy eksport do siatki (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span typeof="mw:File"><a href="../index.php?title=Text-x-python.png&amp;filetimestamp=20121224162851&amp;.html" class="mw-file-description" title="Generic macro icon. Create your personal icon with the same name of the macro"><img alt="Generic macro icon. Create your personal icon with the same name of the macro" src="../File/Text-x-python.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span> </span>
+<p><span typeof="mw:File"><a href="../index.php?title=Text-x-python.png&amp;filetimestamp=20121224162851&amp;.html" class="mw-file-description" title="Icona macro generica. Crea la tua icona personale con lo stesso nome della macro"><img alt="Icona macro generica. Crea la tua icona personale con lo stesso nome della macro" src="../File/Text-x-python.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span> </span>
 Batch Export To Mesh
 </p>
 </td></tr>
 <tr>
-<th class="ctOdd">Description
+<th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">This macro helps batch converting to mesh and exporting STL and OBJ files<br><br>Macro version: 2.17<br>Last modified: 2025-11-15<br>Author: Pablo Gil Fern&aacute;ndez<br>
+<td class="ctEven left macro-description">Questa macro aiuta la conversione batch in mesh e l'esportazione di file STL e OBJ<br><br>Versione macro: 2.17<br>Ultima modifica: 2025-11-15<br>Autore: Pablo Gil Fern&aacute;ndez<br>
 </td></tr>
 <tr>
-<th class="ctOdd">Author
+<th class="ctOdd">Autore
 </th></tr>
 <tr>
 <td class="ctEven macro-author"><a href="../index.php?title=User;Pablo_Gil_Fern%C3%A1ndez&amp;action=edit&amp;redlink=1.html" class="new" title="User:Pablo Gil Fern&aacute;ndez (page does not exist)">Pablo Gil Fern&aacute;ndez</a>
@@ -31,40 +30,40 @@ Batch Export To Mesh
 <td class="ctEven macro-download"><i>None</i>
 </td></tr>
 <tr>
-<th class="ctOdd">Links
+<th class="ctOdd">Link
 </th></tr>
 <tr>
-<td class="ctEven macro-Links"><a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a><br><a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a><br><a href="../Customize_Toolbars.html" title="Customize Toolbars">How to customize toolbars</a>
+<td class="ctEven macro-Links"><a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a><br><a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a><br><a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la  toolbar</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Macro Version
+<th class="ctOdd">Versione macro
 </th></tr>
 <tr>
 <td class="ctEven macro-version">2.17
 </td></tr>
 <tr>
-<th class="ctOdd">Date last modified
+<th class="ctOdd">Data ultima modifica
 </th></tr>
 <tr>
 <td class="ctEven macro-date">2025-11-15
 </td></tr>
 <tr>
-<th class="ctOdd">FreeCAD Version(s)
+<th class="ctOdd">Versioni di FreeCAD
 </th></tr>
 <tr>
 <td class="ctEven FreeCAD-version"><i>None</i>
 </td></tr>
 <tr>
-<th class="ctOdd">Default shortcut
+<th class="ctOdd">Scorciatoia
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuna</i>
 </td></tr>
 <tr>
-<th class="ctOdd">See also
+<th class="ctOdd">Vedere anche
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuno</i>
 </td></tr>
 <tr>
 <th class="ctOdd">
@@ -73,14 +72,11 @@ Batch Export To Mesh
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This macro helps batch converting to mesh and exporting STL and OBJ files. It adds a GUI for speeding up the conversion and file saving of selected objects.
+<p>Questa macro facilita la conversione batch in mesh e l'esportazione di file STL e OBJ. Aggiunge un'interfaccia grafica per velocizzare la conversione e il salvataggio degli oggetti selezionati.
 </p>
-</div>
 <figure class="mw-halign-center" typeof="mw:File/Frameless"><a href="../index.php?title=Screenshot1.png&amp;filetimestamp=20241010153545&amp;.html" class="mw-file-description" title="general"><img alt="Macro Batch Export To Mesh - general" src="../File/Screenshot1.png" decoding="async" width="560" height="331" class="mw-file-element" data-file-width="1854" data-file-height="1096"></a><figcaption>general</figcaption></figure>
 <p><br>
 </p>
@@ -1170,28 +1166,28 @@ Quest'opera &egrave; rilasciata con licenza GNU Lesser General Public License (L
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123135751
+Cached time: 20260123135840
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.041 seconds
-Preprocessor visited node count: 98/1000000
-Post&#8208;expand include size: 2172/2097152 bytes
-Template argument size: 289/2097152 bytes
+CPU time usage: 0.038 seconds
+Real time usage: 0.050 seconds
+Preprocessor visited node count: 94/1000000
+Post&#8208;expand include size: 2220/2097152 bytes
+Template argument size: 298/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 50450/5000000 bytes
+Unstrip post&#8208;expand size: 50451/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.528      1 -total
- 67.86%    3.751      1 Template:Macro
- 30.34%    1.677      1 Template:MacroCode
+100.00%    8.106      1 -total
+ 67.09%    5.438      1 Template:Macro/it
+ 30.90%    2.505      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135751 and revision id 1742898. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135840 and revision id 1742902. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
