Created page with "* Opzione di meshing ''standard'' di FreeCAD * Nomi personalizzati (oggetto, progetto o personalizzato) * Converte/esporta uno o più oggetti contemporaneamente * Converte gli oggetti nel progetto FreeCAD attivo o * Esporta gli oggetti in file STL o OBJ * Sono consentiti percorsi assoluti o relativi * Seleziona coordinate locali o globali (utile per la progettazione di stampa 3D) * Crea cartelle se necessario * Apre la cartella in Esplora file * Caricamento/salvataggio p..."

--- a/wiki/it/Macro_Batch_Export_To_Mesh.html
+++ b/wiki/it/Macro_Batch_Export_To_Mesh.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Batch_Export_To_Mesh.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Stapelexport in Netz (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Batch_Export_To_Mesh.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Batch Export To Mesh (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Batch_Export_To_Mesh.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Batch Export To Mesh (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Batch_Export_To_Mesh.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Zbiorczy eksport do siatki (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -84,19 +84,17 @@ Batch Export To Mesh
 <p><span id="Features"></span>
 </p>
 <h2><span class="mw-headline" id="Funzioni">Funzioni</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>FreeCAD <i>standard</i> meshing option</li>
-<li>Custom names (object, project or custom)</li>
-<li>Converts/exports one or several objects at once</li>
-<li>Convert objects into the active FreeCAD project or</li>
-<li>Export objects to STL or OBJ files</li>
-<li>Absolute or relative paths are allowed</li>
-<li>Select local or global coordinates (useful for 3D print design)</li>
-<li>Creates folders if needed</li>
-<li>Opens folder in file explorer</li>
-<li>Preset loading/saving</li>
-<li>Remember last preset used</li></ul>
-</div>
+<ul><li>Opzione di meshing <i>standard</i> di FreeCAD</li>
+<li>Nomi personalizzati (oggetto, progetto o personalizzato)</li>
+<li>Converte/esporta uno o pi&ugrave; oggetti contemporaneamente</li>
+<li>Converte gli oggetti nel progetto FreeCAD attivo o</li>
+<li>Esporta gli oggetti in file STL o OBJ</li>
+<li>Sono consentiti percorsi assoluti o relativi</li>
+<li>Seleziona coordinate locali o globali (utile per la progettazione di stampa 3D)</li>
+<li>Crea cartelle se necessario</li>
+<li>Apre la cartella in Esplora file</li>
+<li>Caricamento/salvataggio preimpostazioni</li>
+<li>Ricorda l'ultima preimpostazione utilizzata</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <pre>__Title__   = "Batch export to mesh"
 __Author__  = "Pablo Gil Fern&aacute;ndez"
@@ -1166,28 +1164,28 @@ Quest'opera &egrave; rilasciata con licenza GNU Lesser General Public License (L
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123135840
+Cached time: 20260123140130
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.050 seconds
-Preprocessor visited node count: 94/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.079 seconds
+Preprocessor visited node count: 93/1000000
 Post&#8208;expand include size: 2220/2097152 bytes
 Template argument size: 298/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 50451/5000000 bytes
+Unstrip post&#8208;expand size: 50455/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.106      1 -total
- 67.09%    5.438      1 Template:Macro/it
- 30.90%    2.505      1 Template:MacroCode
+100.00%   19.417      1 -total
+ 60.54%   11.755      1 Template:Macro/it
+ 38.01%    7.380      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123135840 and revision id 1742902. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123140130 and revision id 1742904. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
