Updated page Macro Batch Export To Mesh/it

--- a/wiki/it/Macro_Batch_Export_To_Mesh.html
+++ b/wiki/it/Macro_Batch_Export_To_Mesh.html
@@ -83,7 +83,7 @@ Batch Export To Mesh
 <figure class="mw-halign-center" typeof="mw:File/Frameless"><a href="../index.php?title=Screenshot2.png&amp;filetimestamp=20241010153642&amp;.html" class="mw-file-description" title="presets"><img alt="Macro Batch Export To Mesh - presets" src="../File/Screenshot2.png" decoding="async" width="560" height="334" class="mw-file-element" data-file-width="1852" data-file-height="1104"></a><figcaption>presets</figcaption></figure>
 <p><span id="Features"></span>
 </p>
-<h2><span class="mw-headline" id="Funzioni">Funzioni</span></h2>
+<h2><span id="Funzionalit.C3.A0"></span><span class="mw-headline" id="Funzionalit&agrave;">Funzionalit&agrave;</span></h2>
 <ul><li>Opzione di meshing <i>standard</i> di FreeCAD</li>
 <li>Nomi personalizzati (oggetto, progetto o personalizzato)</li>
 <li>Converte/esporta uno o pi&ugrave; oggetti contemporaneamente</li>
@@ -1164,12 +1164,12 @@ Quest'opera &egrave; rilasciata con licenza GNU Lesser General Public License (L
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123140130
+Cached time: 20260123140140
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.079 seconds
+CPU time usage: 0.030 seconds
+Real time usage: 0.047 seconds
 Preprocessor visited node count: 93/1000000
 Post&#8208;expand include size: 2220/2097152 bytes
 Template argument size: 298/2097152 bytes
@@ -1180,12 +1180,12 @@ Unstrip post&#8208;expand size: 50455/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.417      1 -total
- 60.54%   11.755      1 Template:Macro/it
- 38.01%    7.380      1 Template:MacroCode
+100.00%    6.761      1 -total
+ 62.81%    4.247      1 Template:Macro/it
+ 35.87%    2.425      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123140130 and revision id 1742904. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412417-0!canonical and timestamp 20260123140139 and revision id 1742906. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
