--- a/wiki/it/Macro_EasyAlias.html
+++ b/wiki/it/Macro_EasyAlias.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Leichter Alias (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_EasyAlias.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro EasyAlias (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro EasyAlias (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: EasyAlias (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="EasyAlias &#47588;&#53356;&#47196; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -75,9 +75,9 @@ Macro EasyAlias
 </td></tr>
 </tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Use this to quickly and easily create aliases for cells in your spreadsheets. It takes the text labels you will have already created in one column and uses those labels as aliases in the next column. For example, the text labels in Column A can be used to create aliases for the cells in Column B. Since version 2022.03.21 if you include text inside parentheses only that text will be the alias. For example, "Height of top end (topHeight)" as the label (without the quotes) would make the alias of topHeight in the next column.
 </p>
@@ -298,12 +298,12 @@ def main():
 main()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123140224
+Cached time: 20260123140229
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.030 seconds
-Real time usage: 0.050 seconds
+CPU time usage: 0.034 seconds
+Real time usage: 0.114 seconds
 Preprocessor visited node count: 104/1000000
 Post&#8208;expand include size: 2877/2097152 bytes
 Template argument size: 6621/2097152 bytes
@@ -314,13 +314,13 @@ Unstrip post&#8208;expand size: 7416/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.587      1 -total
- 49.03%    3.720      1 Template:Macro
- 28.07%    2.130      1 Template:MacroCode
- 20.66%    1.567      1 Template:Caption
+100.00%   22.500      1 -total
+ 35.37%    7.959      1 Template:MacroCode
+ 30.47%    6.856      1 Template:Macro
+ 29.82%    6.710      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123140224 and revision id 1742910. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123140229 and revision id 1742912. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
