--- a/wiki/it/Macro_EasyAlias.html
+++ b/wiki/it/Macro_EasyAlias.html
@@ -82,9 +82,9 @@ Macro EasyAlias
 <p>Use this to quickly and easily create aliases for cells in your spreadsheets. It takes the text labels you will have already created in one column and uses those labels as aliases in the next column. For example, the text labels in Column A can be used to create aliases for the cells in Column B. Since version 2022.03.21 if you include text inside parentheses only that text will be the alias. For example, "Height of top end (topHeight)" as the label (without the quotes) would make the alias of topHeight in the next column.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Highlight the cells containing the text labels and run the macro. Adjacent cells in the next column will now contain aliases made from the text values from the highlighted cells.
 </p>
@@ -298,12 +298,12 @@ def main():
 main()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123140229
+Cached time: 20260123140236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.114 seconds
+CPU time usage: 0.036 seconds
+Real time usage: 0.075 seconds
 Preprocessor visited node count: 104/1000000
 Post&#8208;expand include size: 2877/2097152 bytes
 Template argument size: 6621/2097152 bytes
@@ -314,13 +314,13 @@ Unstrip post&#8208;expand size: 7416/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.500      1 -total
- 35.37%    7.959      1 Template:MacroCode
- 30.47%    6.856      1 Template:Macro
- 29.82%    6.710      1 Template:Caption
+100.00%   14.756      1 -total
+ 39.73%    5.862      1 Template:MacroCode
+ 39.20%    5.785      1 Template:Macro
+ 19.42%    2.866      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123140229 and revision id 1742912. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123140236 and revision id 1742914. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
