Created page with "{{Macro/it |Name=Macro EasyAlias |Icon=easy-alias-icon.png |Description=Utilizzare questo strumento per creare rapidamente e facilmente alias per le celle nei tuoi fogli di calcolo. Si legge le etichette di testo già create in una colonna e le riporta come alias nella colonna successiva. |Author=TheMarkster |Version=2025.06.19 |Date=2025-06-19 |FCVersion=0.21 |Download=[https://wiki.freecad.org/images/5/5e/Easy-alias-icon.png ToolBar Icon] }}"

--- a/wiki/it/Macro_EasyAlias.html
+++ b/wiki/it/Macro_EasyAlias.html
@@ -5,7 +5,6 @@
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: EasyAlias (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="EasyAlias &#47588;&#53356;&#47196; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -14,13 +13,13 @@ Macro EasyAlias
 </p>
 </td></tr>
 <tr>
-<th class="ctOdd">Description
+<th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Use this to quickly and easily create aliases for cells in your spreadsheets. It takes the text labels you will have already created in one column and uses those labels as aliases in the next column.<br><br>Macro version: 2025.06.19<br>Last modified: 2025-06-19<br>FreeCAD version: 0.21<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/5/5e/Easy-alias-icon.png">ToolBar Icon</a><br>Author: TheMarkster<br>
+<td class="ctEven left macro-description">Utilizzare questo strumento per creare rapidamente e facilmente alias per le celle nei tuoi fogli di calcolo. Si legge le etichette di testo gi&agrave; create in una colonna e le riporta come alias nella colonna successiva.<br><br>Versione macro: 2025.06.19<br>Ultima modifica: 2025-06-19<br>Versione FreeCAD: 0.21<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/5/5e/Easy-alias-icon.png">ToolBar Icon</a><br>Autore: TheMarkster<br>
 </td></tr>
 <tr>
-<th class="ctOdd">Author
+<th class="ctOdd">Autore
 </th></tr>
 <tr>
 <td class="ctEven macro-author"><a href="../index.php?title=User;TheMarkster&amp;action=edit&amp;redlink=1.html" class="new" title="User:TheMarkster (page does not exist)">TheMarkster</a>
@@ -32,40 +31,40 @@ Macro EasyAlias
 <td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/5/5e/Easy-alias-icon.png">ToolBar Icon</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Links
+<th class="ctOdd">Link
 </th></tr>
 <tr>
-<td class="ctEven macro-Links"><a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a><br><a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a><br><a href="../Customize_Toolbars.html" title="Customize Toolbars">How to customize toolbars</a>
+<td class="ctEven macro-Links"><a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a><br><a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a><br><a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la  toolbar</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Macro Version
+<th class="ctOdd">Versione macro
 </th></tr>
 <tr>
 <td class="ctEven macro-version">2025.06.19
 </td></tr>
 <tr>
-<th class="ctOdd">Date last modified
+<th class="ctOdd">Data ultima modifica
 </th></tr>
 <tr>
 <td class="ctEven macro-date">2025-06-19
 </td></tr>
 <tr>
-<th class="ctOdd">FreeCAD Version(s)
+<th class="ctOdd">Versioni di FreeCAD
 </th></tr>
 <tr>
 <td class="ctEven FreeCAD-version">0.21
 </td></tr>
 <tr>
-<th class="ctOdd">Default shortcut
+<th class="ctOdd">Scorciatoia
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuna</i>
 </td></tr>
 <tr>
-<th class="ctOdd">See also
+<th class="ctOdd">Vedere anche
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuno</i>
 </td></tr>
 <tr>
 <th class="ctOdd">
@@ -74,7 +73,6 @@ Macro EasyAlias
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -296,15 +294,15 @@ def main():
 main()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123140243
+Cached time: 20260123142158
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.057 seconds
-Preprocessor visited node count: 103/1000000
-Post&#8208;expand include size: 2877/2097152 bytes
-Template argument size: 6621/2097152 bytes
+CPU time usage: 0.037 seconds
+Real time usage: 0.066 seconds
+Preprocessor visited node count: 100/1000000
+Post&#8208;expand include size: 2921/2097152 bytes
+Template argument size: 6639/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -312,13 +310,13 @@ Unstrip post&#8208;expand size: 7416/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.363      1 -total
- 39.50%    4.093      1 Template:Macro
- 31.04%    3.217      1 Template:Caption
- 26.66%    2.763      1 Template:MacroCode
+100.00%   11.111      1 -total
+ 41.95%    4.661      1 Template:Macro/it
+ 30.38%    3.375      1 Template:Caption
+ 23.78%    2.642      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123140243 and revision id 1742916. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123142158 and revision id 1742919. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
