--- a/wiki/it/Macro_EasyAlias.html
+++ b/wiki/it/Macro_EasyAlias.html
@@ -76,7 +76,7 @@ Macro EasyAlias
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<p>Utilizzare questa funzione per creare rapidamente e facilmente alias per le celle dei fogli di calcolo. Si legge le etichette di testo gi&agrave; create in una colonna come alias nella colonna successiva. Ad esempio, le etichette di testo nella colonna A possono essere utilizzate per creare alias per le celle nella colonna B. Dalla versione 2022.03.21, se si include del testo tra parentesi, solo quel testo diventer&agrave; l'alias. Ad esempio, "Altezza dell'estremit&agrave; superiore (topHeight)" come etichetta (senza virgolette) creer&agrave; l'alias topHeight nella colonna successiva.
+<p>Utilizzare questa funzione per creare rapidamente e facilmente alias per le celle dei fogli di calcolo. Si legge le etichette di testo gi&agrave; create in una colonna e le riporta come alias nella colonna successiva. Ad esempio, le etichette di testo nella colonna A possono essere utilizzate per creare alias per le celle nella colonna B. Dalla versione 2022.03.21, se si include del testo tra parentesi, solo quel testo diventer&agrave; l'alias. Ad esempio, "Altezza dell'estremit&agrave; superiore (topHeight)" come etichetta (senza virgolette) creer&agrave; l'alias topHeight nella colonna successiva.
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
@@ -291,12 +291,12 @@ def main():
 main()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123142250
+Cached time: 20260123142334
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.077 seconds
+CPU time usage: 0.031 seconds
+Real time usage: 0.116 seconds
 Preprocessor visited node count: 99/1000000
 Post&#8208;expand include size: 2921/2097152 bytes
 Template argument size: 6639/2097152 bytes
@@ -307,13 +307,13 @@ Unstrip post&#8208;expand size: 7416/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.101      1 -total
- 38.84%    4.312      1 Template:Macro/it
- 29.19%    3.240      1 Template:MacroCode
- 23.49%    2.608      1 Template:Caption
+100.00%   16.747      1 -total
+ 42.33%    7.089      1 Template:Macro/it
+ 28.75%    4.814      1 Template:Caption
+ 25.01%    4.189      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123142250 and revision id 1742921. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123142334 and revision id 1742923. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
