--- a/wiki/it/Macro_EasyAlias.html
+++ b/wiki/it/Macro_EasyAlias.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Leichter Alias (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_EasyAlias.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro EasyAlias (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro EasyAlias (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: EasyAlias (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/Macro_EasyAlias.html" class="mw-pt-progress mw-pt-progress--complete" title="EasyAlias &#47588;&#53356;&#47196; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -80,11 +80,8 @@ Macro EasyAlias
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Highlight the cells containing the text labels and run the macro. Adjacent cells in the next column will now contain aliases made from the text values from the highlighted cells.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=EasyAlias-scr1.png&amp;filetimestamp=20200207190307&amp;.html" class="mw-file-description"><img src="../File/EasyAlias-scr1.png" decoding="async" width="600" height="293" class="mw-file-element" data-file-width="828" data-file-height="405"></a></span>
+<p>Evidenziare le celle contenenti le etichette di testo ed eseguire la macro. Le celle adiacenti nella colonna successiva ora conterranno gli alias creati con i valori di testo delle celle evidenziate.
+</p><p><span typeof="mw:File"><a href="../index.php?title=EasyAlias-scr1.png&amp;filetimestamp=20200207190307&amp;.html" class="mw-file-description"><img src="../File/EasyAlias-scr1.png" decoding="async" width="600" height="293" class="mw-file-element" data-file-width="828" data-file-height="405"></a></span>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">EasyAlias screenshot1, Text labels from Column A are used to create the aliases in Column B.</p>
@@ -291,29 +288,29 @@ def main():
 main()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123142334
+Cached time: 20260123142433
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.031 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 99/1000000
+CPU time usage: 0.029 seconds
+Real time usage: 0.045 seconds
+Preprocessor visited node count: 98/1000000
 Post&#8208;expand include size: 2921/2097152 bytes
 Template argument size: 6639/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7416/5000000 bytes
+Unstrip post&#8208;expand size: 7417/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.747      1 -total
- 42.33%    7.089      1 Template:Macro/it
- 28.75%    4.814      1 Template:Caption
- 25.01%    4.189      1 Template:MacroCode
+100.00%    6.085      1 -total
+ 38.54%    2.345      1 Template:Macro/it
+ 30.93%    1.882      1 Template:MacroCode
+ 28.09%    1.709      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123142334 and revision id 1742923. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123142433 and revision id 1742925. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
