--- a/wiki/it/Macro_EasyAlias.html
+++ b/wiki/it/Macro_EasyAlias.html
@@ -87,11 +87,8 @@ Macro EasyAlias
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">EasyAlias screenshot1, Text labels from Column A are used to create the aliases in Column B.</p>
 </div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Easy-alias-icon.png&amp;filetimestamp=20200207183746&amp;.html" class="mw-file-description"><img src="../File/Easy-alias-icon.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_EasyAlias.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Easy-alias-icon.png&amp;filetimestamp=20200207183746&amp;.html" class="mw-file-description"><img src="../File/Easy-alias-icon.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_EasyAlias.FCMacro</b>
 </p>
 <pre># -*- coding: utf-8 -*-
 import FreeCAD
@@ -288,13 +285,13 @@ def main():
 main()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123142433
+Cached time: 20260123142449
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.045 seconds
-Preprocessor visited node count: 98/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.052 seconds
+Preprocessor visited node count: 97/1000000
 Post&#8208;expand include size: 2921/2097152 bytes
 Template argument size: 6639/2097152 bytes
 Highest expansion depth: 5/100
@@ -304,13 +301,13 @@ Unstrip post&#8208;expand size: 7417/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.085      1 -total
- 38.54%    2.345      1 Template:Macro/it
- 30.93%    1.882      1 Template:MacroCode
- 28.09%    1.709      1 Template:Caption
+100.00%    7.490      1 -total
+ 45.71%    3.424      1 Template:Macro/it
+ 27.12%    2.031      1 Template:MacroCode
+ 24.08%    1.804      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123142433 and revision id 1742925. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123142449 and revision id 1742927. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
