--- a/wiki/it/Macro_EasyAlias.html
+++ b/wiki/it/Macro_EasyAlias.html
@@ -16,7 +16,7 @@ Macro EasyAlias
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Utilizzare questo strumento per creare rapidamente e facilmente alias per le celle nei tuoi fogli di calcolo. Si legge le etichette di testo gi&agrave; create in una colonna e le riporta come alias nella colonna successiva.<br><br>Versione macro: 2025.06.19<br>Ultima modifica: 2025-06-19<br>Versione FreeCAD: 0.21<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/5/5e/Easy-alias-icon.png">ToolBar Icon</a><br>Autore: TheMarkster<br>
+<td class="ctEven left macro-description">Utilizzare questo strumento per creare rapidamente e facilmente alias per le celle nei fogli di calcolo. Si legge le etichette di testo gi&agrave; create in una colonna e le riporta come alias nella colonna successiva.<br><br>Versione macro: 2025.06.19<br>Ultima modifica: 2025-06-19<br>Versione FreeCAD: 0.21<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/5/5e/Easy-alias-icon.png">ToolBar Icon</a><br>Autore: TheMarkster<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
@@ -283,15 +283,15 @@ def main():
 main()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123142507
+Cached time: 20260123142606
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.050 seconds
+CPU time usage: 0.031 seconds
+Real time usage: 0.043 seconds
 Preprocessor visited node count: 96/1000000
-Post&#8208;expand include size: 2979/2097152 bytes
-Template argument size: 6668/2097152 bytes
+Post&#8208;expand include size: 2974/2097152 bytes
+Template argument size: 6663/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -299,13 +299,13 @@ Unstrip post&#8208;expand size: 7421/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.051      1 -total
- 36.98%    2.607      1 Template:Macro/it
- 31.55%    2.225      1 Template:Caption
- 28.29%    1.995      1 Template:MacroCode
+100.00%    5.128      1 -total
+ 42.44%    2.176      1 Template:Macro/it
+ 27.75%    1.423      1 Template:Caption
+ 27.05%    1.387      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123142507 and revision id 1742929. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412429-0!canonical and timestamp 20260123142606 and revision id 1742931. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
