--- a/wiki/it/Macro_Colorize.html
+++ b/wiki/it/Macro_Colorize.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Einf&auml;rben (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Colorize.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Colorize (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Colorize (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Colorize.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Kolorowanie (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -74,16 +74,16 @@ Macro Colorize
 </td></tr>
 </tbody></table>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This macro allows to quickly and easily set the color and transparency of individual faces, edges, and vertices.
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ol><li>Select one or more subobjects.</li>
 <li>Run the macro.</li>
@@ -221,12 +221,12 @@ setColors()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123144204
+Cached time: 20260123144216
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.093 seconds
+CPU time usage: 0.037 seconds
+Real time usage: 0.081 seconds
 Preprocessor visited node count: 121/1000000
 Post&#8208;expand include size: 3006/2097152 bytes
 Template argument size: 4629/2097152 bytes
@@ -237,14 +237,14 @@ Unstrip post&#8208;expand size: 5316/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.150      1 -total
- 27.36%    3.324      1 Template:Clear
- 27.18%    3.302      1 Template:Macro
- 24.80%    3.013      1 Template:MacroCode
- 17.73%    2.154      3 Template:Button
+100.00%   20.707      1 -total
+ 34.11%    7.064      1 Template:Macro
+ 27.28%    5.649      1 Template:MacroCode
+ 18.63%    3.857      1 Template:Clear
+ 17.58%    3.641      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123144203 and revision id 1742933. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123144215 and revision id 1742937. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
