--- a/wiki/it/Macro_Colorize.html
+++ b/wiki/it/Macro_Colorize.html
@@ -107,11 +107,8 @@ Macro Colorize
 <li>The Color properties and the Transparency property of an object are global properties. Changing them will override any changes made to individual subobjects.</li></ul>
 </div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Workbench_Image.svg&amp;filetimestamp=20200404172907&amp;.html" class="mw-file-description"><img src="../File/Workbench_Image.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_Colorize.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Workbench_Image.svg&amp;filetimestamp=20200404172907&amp;.html" class="mw-file-description"><img src="../File/Workbench_Image.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_Colorize.FCMacro</b>
 </p>
 <pre># -*- coding: utf-8 -*-
 #Colorize macro, 2021, by &lt;TheMarkster&gt; LGPL2.1 or later
@@ -219,13 +216,13 @@ setColors()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123144232
+Cached time: 20260123144306
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.058 seconds
-Preprocessor visited node count: 120/1000000
+CPU time usage: 0.031 seconds
+Real time usage: 0.127 seconds
+Preprocessor visited node count: 119/1000000
 Post&#8208;expand include size: 3006/2097152 bytes
 Template argument size: 4629/2097152 bytes
 Highest expansion depth: 5/100
@@ -235,14 +232,14 @@ Unstrip post&#8208;expand size: 5316/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.796      1 -total
- 44.17%    4.769      1 Template:Macro
- 19.04%    2.056      1 Template:MacroCode
- 18.65%    2.013      3 Template:Button
- 14.01%    1.512      1 Template:Clear
+100.00%   21.175      1 -total
+ 32.58%    6.898      3 Template:Button
+ 29.95%    6.342      1 Template:MacroCode
+ 29.20%    6.184      1 Template:Macro
+  6.46%    1.368      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123144232 and revision id 1742939. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123144306 and revision id 1742941. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
