--- a/wiki/it/Macro_Colorize.html
+++ b/wiki/it/Macro_Colorize.html
@@ -95,9 +95,9 @@ Macro Colorize
 <li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Cancel</span> button to cancel the macro.</li></ul></li>
 <li>If you have pressed <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> and the subobjects belong to more than one object, the color dialog will re-open for the next object.</li></ol>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Notes">Notes</span></h2>
-</div>
+<p><span id="Notes"></span>
+</p>
+<h2><span class="mw-headline" id="Note">Note</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>The current color of the first selected subobject of the current object will be the default color in the dialog. The first 2 custom colors will be the default gray for faces, and the default black for edges and points. The default for the alpha channel will be 0 (no transparency).</li>
 <li>You can use any color you like, but you should probably avoid the colors used for selection (default: green) and preselection (default: yellow) indicators.</li>
@@ -216,12 +216,12 @@ setColors()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123144306
+Cached time: 20260123144320
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.031 seconds
-Real time usage: 0.127 seconds
+CPU time usage: 0.032 seconds
+Real time usage: 0.051 seconds
 Preprocessor visited node count: 119/1000000
 Post&#8208;expand include size: 3006/2097152 bytes
 Template argument size: 4629/2097152 bytes
@@ -232,14 +232,14 @@ Unstrip post&#8208;expand size: 5316/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.175      1 -total
- 32.58%    6.898      3 Template:Button
- 29.95%    6.342      1 Template:MacroCode
- 29.20%    6.184      1 Template:Macro
-  6.46%    1.368      1 Template:Clear
+100.00%    8.000      1 -total
+ 41.49%    3.319      1 Template:Macro
+ 21.39%    1.711      3 Template:Button
+ 19.27%    1.542      1 Template:MacroCode
+ 13.52%    1.082      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123144306 and revision id 1742941. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123144320 and revision id 1742943. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
