Created page with "* Il colore corrente del primo sub-oggetto selezionato dell'oggetto corrente sarà il colore predefinito nella finestra di dialogo. I primi 2 colori personalizzati saranno il grigio predefinito per le facce e il nero predefinito per bordi e punti. Il valore predefinito per il canale alfa sarà 0 (nessuna trasparenza). * Si può usare qualsiasi colore si desideri, ma probabilmente è meglio evitare i colori utilizzati per gli indicatori di selezione (predefinito: verde) e..."

--- a/wiki/it/Macro_Colorize.html
+++ b/wiki/it/Macro_Colorize.html
@@ -93,14 +93,12 @@ Macro Colorize
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Note">Note</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>The current color of the first selected subobject of the current object will be the default color in the dialog. The first 2 custom colors will be the default gray for faces, and the default black for edges and points. The default for the alpha channel will be 0 (no transparency).</li>
-<li>You can use any color you like, but you should probably avoid the colors used for selection (default: green) and preselection (default: yellow) indicators.</li>
-<li>The transparency option does not appear to function for edges and points, only for faces.</li>
-<li>A transparent face is still selectable in the 3D view.</li>
-<li>If the interior side of faces appears black and you would prefer to see the face colors, change the Lighting property of the object from One side to Two side on the View tab.</li>
-<li>The Color properties and the Transparency property of an object are global properties. Changing them will override any changes made to individual subobjects.</li></ul>
-</div>
+<ul><li>Il colore corrente del primo sub-oggetto selezionato dell'oggetto corrente sar&agrave; il colore predefinito nella finestra di dialogo. I primi 2 colori personalizzati saranno il grigio predefinito per le facce e il nero predefinito per bordi e punti. Il valore predefinito per il canale alfa sar&agrave; 0 (nessuna trasparenza).</li>
+<li>Si pu&ograve; usare qualsiasi colore si desideri, ma probabilmente &egrave; meglio evitare i colori utilizzati per gli indicatori di selezione (predefinito: verde) e preselezione (predefinito: giallo).</li>
+<li>L'opzione di trasparenza non sembra funzionare per bordi e punti, ma solo per le facce.</li>
+<li>Una faccia trasparente &egrave; ancora selezionabile nella vista 3D.</li>
+<li>Se il lato interno delle facce appare nero e si preferiscie vedere i colori delle facce, modificare la propriet&agrave; Lighting dell'oggetto da Un lato a Due lati nella scheda Vista.</li>
+<li>Le propriet&agrave; Colore e Trasparenza di un oggetto sono propriet&agrave; globali. La loro modifica sovrascriver&agrave; qualsiasi modifica apportata ai singoli sub-oggetti.</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Workbench_Image.svg&amp;filetimestamp=20200404172907&amp;.html" class="mw-file-description"><img src="../File/Workbench_Image.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b>Macro_Colorize.FCMacro</b>
@@ -211,13 +209,13 @@ setColors()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123150103
+Cached time: 20260123154903
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.033 seconds
-Real time usage: 0.051 seconds
-Preprocessor visited node count: 115/1000000
+Real time usage: 0.053 seconds
+Preprocessor visited node count: 114/1000000
 Post&#8208;expand include size: 3036/2097152 bytes
 Template argument size: 4633/2097152 bytes
 Highest expansion depth: 5/100
@@ -227,14 +225,14 @@ Unstrip post&#8208;expand size: 5317/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.050      1 -total
- 37.33%    3.378      1 Template:Macro/it
- 26.28%    2.378      1 Template:MacroCode
- 15.99%    1.447      3 Template:Button
- 15.09%    1.366      1 Template:Clear
+100.00%   10.680      1 -total
+ 34.44%    3.678      1 Template:Macro/it
+ 25.12%    2.683      1 Template:MacroCode
+ 17.96%    1.918      3 Template:Button
+ 17.88%    1.910      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123150103 and revision id 1742947. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412439-0!canonical and timestamp 20260123154903 and revision id 1742949. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
