Created page with "==Descrizione=="

--- a/wiki/it/Macro_View_Rotation.html
+++ b/wiki/it/Macro_View_Rotation.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro View Rotation/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+View+Rotation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro View Rotation (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Ansicht drehen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_View_Rotation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro View Rotation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--med" title="Macro View Rotation (31% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Macro_View_Rotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro View Rotation (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -75,11 +75,11 @@ Rotazione della vista
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa GUI permette di ruotare la vista con maggiore precisione rispetto a quando si utilizza il mouse. La rotazione avviene intorno ad assi fissati rispetto all'utente e non agli oggetti, lo scopo &egrave; quello di ruotare gli oggetti approssimativamente attorno al loro centro invece che attorno al centro della vista.
 </p><p><br>
 Per impostazione predefinita, la GUI viene visualizzata in alto a destra dello schermo, si pu&ograve; cambiare questo comportamento modificando
@@ -406,31 +406,31 @@ if __name__ == '__main__':
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20251009171908
+Cached time: 20260123155553
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.101 seconds
+CPU time usage: 0.053 seconds
+Real time usage: 0.187 seconds
 Preprocessor visited node count: 148/1000000
 Post&#8208;expand include size: 3069/2097152 bytes
 Template argument size: 9396/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 11252/5000000 bytes
+Unstrip post&#8208;expand size: 11253/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.945      1 -total
- 30.59%    3.042      1 Template:Macro/it
- 19.38%    1.927      1 Template:Code
- 16.74%    1.665      1 Template:Codeextralink
- 14.01%    1.393      1 Template:MacroCode
- 12.50%    1.243      1 Template:Clear
+100.00%   34.496      1 -total
+ 28.71%    9.904      1 Template:Macro/it
+ 24.23%    8.357      1 Template:Clear
+ 17.60%    6.072      1 Template:Codeextralink
+ 13.99%    4.825      1 Template:Code
+ 13.51%    4.661      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20251009171908 and revision id 1659666. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20260123155552 and revision id 1742971. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
