Updated page Macro View Rotation/it

--- a/wiki/it/Macro_View_Rotation.html
+++ b/wiki/it/Macro_View_Rotation.html
@@ -376,28 +376,23 @@ if __name__ == '__main__':
 <span id="Option"></span>
 </p>
 <h2><span class="mw-headline" id="Opzioni">Opzioni</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Option">Option</span></h2>
-<p>alla fine della funzione 'initUI'. I primi due argomenti (right-300, 0) (linea 91) stabiliscono come posizione l'angolo in alto a sinistra della finestra - per esperienza questa posizione si adatta bene ad Ubuntu, ma con Vista la finestra risulta troppo in alto per cui &egrave; meglio sostituire lo 0 con un valore vicino a 30.
+<p>Alla fine della funzione 'initUI' i primi due argomenti (right-300, 0) (riga 91) forniscono la posizione dell'angolo in alto a sinistra della finestra. Per esperienza il comportamento &egrave; quello previsto su Ubuntu, mentre su Vista la finestra veniva posizionata troppo in alto e lo 0 doveva essere modificato in ~30.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="bp">self</span><span class="o">.</span><span class="n">setGeometry</span><span class="p">(</span><span class="n">right</span><span class="o">-</span><span class="mi">300</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">300</span><span class="p">,</span> <span class="mi">150</span><span class="p">)</span>
 </pre></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Forum">Forum</span></h2>
-</div>
 <h2><span class="mw-headline" id="Pagina_di_discussione">Pagina di discussione</span></h2>
 <p><a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=1784&amp;hilit=View+Rotation#p12012">View+Rotation</a>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260123155709
+Cached time: 20260123155919
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.050 seconds
-Real time usage: 0.211 seconds
-Preprocessor visited node count: 140/1000000
+CPU time usage: 0.052 seconds
+Real time usage: 0.306 seconds
+Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 3069/2097152 bytes
 Template argument size: 9396/2097152 bytes
 Highest expansion depth: 5/100
@@ -407,15 +402,15 @@ Unstrip post&#8208;expand size: 11254/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.243      1 -total
- 31.47%   13.292      1 Template:Macro/it
- 22.75%    9.612      1 Template:Code
- 19.30%    8.153      1 Template:Codeextralink
- 12.76%    5.389      1 Template:Clear
- 11.56%    4.884      1 Template:MacroCode
+100.00%   55.947      1 -total
+ 31.80%   17.789      1 Template:Codeextralink
+ 19.57%   10.950      1 Template:Macro/it
+ 18.82%   10.527      1 Template:Code
+ 15.79%    8.834      1 Template:MacroCode
+ 13.19%    7.381      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20260123155709 and revision id 1742981. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:2340-0!canonical and timestamp 20260123155919 and revision id 1742985. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
