Created page with "==Descrizione=="

--- a/wiki/it/Macro_DXF_to_Face_and_Sketch.html
+++ b/wiki/it/Macro_DXF_to_Face_and_Sketch.html
@@ -1,12 +1,13 @@
-<link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro DXF to Face and Sketch/it</span></h1><?xml encoding="UTF-8"><div class="mw-parser-output"><div class="mw-pt-languages noprint" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../de/Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro DXF zu Fl&auml;che und Skizze (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro DXF to Face and Sketch/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+DXF+to+Face+and+Sketch&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><a href="../de/Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro DXF zu Fl&auml;che und Skizze (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro DXF to Face and Sketch (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro DXF to Face and Sketch (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-progress mw-pt-progress--stub" title="Makrodefinicja: Utw&oacute;rz &#347;cian&#281; lub szkic z pliku DXF (12% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/Macro_DXF_to_Face_and_Sketch.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Utw&oacute;rz &#347;cian&#281; lub szkic z pliku DXF (8% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span typeof="mw:File"><a href="../File/Macro_DXF_to_Face_and_Sketch.png" class="mw-file-description"><img src="../File/Macro_DXF_to_Face_and_Sketch.png" decoding="async" width="32" height="31"></a></span><span> </span>
+<p><span typeof="mw:File"><a href="../index.php?title=Macro_DXF_to_Face_and_Sketch.png&amp;filetimestamp=20160723200645&amp;.html" class="mw-file-description"><img src="../File/Macro_DXF_to_Face_and_Sketch.png" decoding="async" width="32" height="31" class="mw-file-element" data-file-width="66" data-file-height="64"></a></span><span> </span>
 Facce e Schizzi da DXF
 </p>
 </td></tr>
@@ -14,7 +15,7 @@ Facce e Schizzi da DXF
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Questa macro crea faccia e schizzo da un file DXF<br><br>Versione macro: 02.00<br>Ultima modifica: 2017-10-23<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecadweb.org/wiki/images/6/6d/Macro_DXF_to_Face_and_Sketch.png">ToolBar Icon</a><br>Autore: shoogen,  easyw-fc<br>
+<td class="ctEven left macro-description">Questa macro crea faccia e schizzo da un file DXF<br><br>Versione macro: 02.00<br>Ultima modifica: 2017-10-23<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/6/6d/Macro_DXF_to_Face_and_Sketch.png">ToolBar Icon</a><br>Autore: shoogen,  easyw-fc<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
@@ -26,7 +27,7 @@ Facce e Schizzi da DXF
 <th class="ctOdd">Download
 </th></tr>
 <tr>
-<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://www.freecadweb.org/wiki/images/6/6d/Macro_DXF_to_Face_and_Sketch.png">ToolBar Icon</a>
+<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/6/6d/Macro_DXF_to_Face_and_Sketch.png">ToolBar Icon</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Link
@@ -71,19 +72,39 @@ Facce e Schizzi da DXF
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<p>Questa macro converte gli elementi selezionati di un DXF importato in facce e schizzi.
-</p><p>Pu&ograve; essere utilizzato anche per convertire 'Shape2DView' in Schizzi e funziona anche se sono presenti B-Spline.
+<p><span id="Description"></span>
 </p>
+<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
+<p>Questa macro converte gli elementi selezionati di un DXF importato in facce e schizzi.
+</p>
+</div>
+<p>Pu&ograve; essere utilizzato anche per convertire 'Shape2DView' in Schizzi e funziona anche se sono presenti B-Spline.
+</p>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+<h2><span class="mw-headline" id="Usage">Usage</span></h2>
+</div>
+<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <ul><li>Importare un file DXF</li>
 <li>Selezionare gli elementi da processare</li>
 <li>Avviare la macro, tutti gli oggetti selezionati vengono analizzati e trasformati in facce e in schizzi.</li></ul>
+</div>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+<h2><span class="mw-headline" id="Options">Options</span></h2>
+</div>
+<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Opzioni">Opzioni</span></h2>
 <ul><li>Modificare create_face=True oppure create_sketch=True in  False per generare solo un tipo di oggetti</li></ul>
+</div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../File/Macro_DXF_to_Face_and_Sketch.png" class="mw-file-description"><img src="../File/Macro_DXF_to_Face_and_Sketch.png" decoding="async" width="66" height="64"></a></span>
-</p><p><b>Macro_DXF_to_Face_and_Sketch.FCMacro</b>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_DXF_to_Face_and_Sketch.png&amp;filetimestamp=20160723200645&amp;.html" class="mw-file-description"><img src="../File/Macro_DXF_to_Face_and_Sketch.png" decoding="async" width="66" height="64" class="mw-file-element" data-file-width="66" data-file-height="64"></a></span>
+</p>
+</div>
+<p><br>
+<b>Macro_DXF_to_Face_and_Sketch.FCMacro</b>
 </p>
 <pre>##    Select the items to be processed
 ##    Launch the macro, all selected objects are analyzed and transformed into faces and sketches.
@@ -129,7 +150,7 @@ def shape2Sketch(shape):
     return sketch
 
 def Discretize(shape, addToName=None):
-    ##http://forum.freecadweb.org/viewtopic.php?f=12&amp;t=16336#p129468
+    ##https://forum.freecad.org/viewtopic.php?f=12&amp;t=16336#p129468
     ##Discretizes the edge and returns a list of points.
     ##The function accepts keywords as argument:
     ##discretize(Number=n) =&gt; gives a list of 'n' equidistant points
@@ -168,7 +189,7 @@ def Discretize(shape, addToName=None):
     #stop
 
 def WireDiscretize(wire):
-    ##http://forum.freecadweb.org/viewtopic.php?f=12&amp;t=16336#p129468
+    ##https://forum.freecad.org/viewtopic.php?f=12&amp;t=16336#p129468
     ##Discretizes the edge and returns a list of points.
     ##The function accepts keywords as argument:
     ##discretize(Number=n) =&gt; gives a list of 'n' equidistant points
@@ -299,36 +320,39 @@ if FreeCADGui.Selection.getSelection():
 else:
     #FreeCAD.Console.PrintError("Select elements from dxf imported file\n")
     FreeCAD.Console.PrintWarning("Select elements from dxf imported file\n")</pre>
+<div lang="en" dir="ltr" class="mw-content-ltr">
+<h2><span class="mw-headline" id="Links">Links</span></h2>
+</div>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
-<ul><li>Forum <a rel="nofollow" class="external text" href="http://forum.freecadweb.org/viewtopic.php?f=28&amp;t=16686">Creare uno sketch partendo da un file dxf importato</a></li>
-<li>Esempi di macro <a rel="nofollow" class="external text" href="http://www.freecadweb.org/wiki/index.php?title=Macros_recipes">Macro Creating faces from a DXF file</a></li>
+<ul><li>Forum <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=28&amp;t=16686">Creare uno sketch partendo da un file dxf importato</a></li>
+<li>Esempi di macro <a rel="nofollow" class="external text" href="http://www.freecad.org/wiki/index.php?title=Macros_recipes">Macro Creating faces from a DXF file</a></li>
 <li>Precedente versione <a href="../it/Macro_Creating_faces_from_a_DXF_file.html" title="Macro Creating faces from a DXF file/it">Macro Creating faces from a DXF file</a></li></ul>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20250616181534
+Cached time: 20260123161152
 Cache expiry: 86400
 Reduced expiry: false
-Complications: [show&#8208;toc, no&#8208;toc&#8208;conversion]
-CPU time usage: 0.083 seconds
-Real time usage: 0.128 seconds
-Preprocessor visited node count: 96/1000000
-Post&#8208;expand include size: 2106/2097152 bytes
-Template argument size: 10003/2097152 bytes
+Complications: [show&#8208;toc]
+CPU time usage: 0.038 seconds
+Real time usage: 0.183 seconds
+Preprocessor visited node count: 116/1000000
+Post&#8208;expand include size: 2097/2097152 bytes
+Template argument size: 9990/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 10570/5000000 bytes
+Unstrip post&#8208;expand size: 10790/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.697      1 -total
- 57.94%   13.731      1 Template:Macro/it
- 21.98%    5.209      1 Template:MacroCode
- 17.99%    4.262      1 Template:Clear
+100.00%   37.038      1 -total
+ 45.12%   16.713      1 Template:Macro/it
+ 30.23%   11.197      1 Template:Clear
+ 23.78%    8.809      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:70446-0!canonical and timestamp 20250616181534 and revision id 692137. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:70446-0!canonical and timestamp 20260123161151 and revision id 1742991. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
